Build MP4 container with MP4Box (#30)
Ship Broadcast via DASH #29

Side lab experiments done in
 - https://github.com/charneykaye/encode-fmp4-demo

referenced in the question I posted on Stack Overflow
 - https://stackoverflow.com/questions/69625970/java-mp4parser-to-create-a-single-m4s-fragment