@@ -1,8 +1,7 @@
 // Copyright (c) XJ Music Inc. (https://xj.io) All Rights Reserved.
-package io.xj.ship.work;
+package io.xj.ship.broadcast;
 
 import com.google.api.client.util.Lists;
-import com.google.common.collect.ImmutableList;
 import com.google.inject.Inject;
 import com.google.inject.assistedinject.Assisted;
 import io.xj.lib.app.Environment;
@@ -10,22 +9,25 @@ import io.xj.lib.filestore.FileStoreProvider;
 import io.xj.lib.mixer.AudioStreamWriter;
 import io.xj.lib.mixer.OutputEncoder;
 import io.xj.lib.util.CSV;
-import io.xj.lib.util.Text;
 import io.xj.lib.util.Values;
 import io.xj.nexus.persistence.Segments;
 import io.xj.ship.ShipException;
-import io.xj.ship.broadcast.Chunk;
-import io.xj.ship.broadcast.ChunkManager;
-import io.xj.ship.broadcast.ChunkState;
 import io.xj.ship.source.SegmentAudio;
 import io.xj.ship.source.SegmentAudioManager;
 import io.xj.ship.source.SegmentAudioState;
+import org.mp4parser.Container;
+import org.mp4parser.muxer.FileDataSourceImpl;
+import org.mp4parser.muxer.Movie;
+import org.mp4parser.muxer.tracks.AACTrackImpl;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.sound.sampled.AudioFormat;
 import java.io.BufferedReader;
+import java.io.FileOutputStream;
+import java.io.IOException;
 import java.io.InputStreamReader;
+import java.nio.channels.FileChannel;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Instant;
@@ -35,9 +37,16 @@ import java.util.Objects;
 import java.util.stream.Collectors;
 
 import static io.xj.lib.util.Files.getFileSize;
+import static io.xj.lib.util.Text.formatMultiline;
+import static org.joda.time.DateTimeConstants.MILLIS_PER_SECOND;
 
 /**
- * Ship broadcast via HTTP Live Streaming #179453189
+ Ship broadcast via HTTP Live Streaming #179453189
+ <p>
+ Side lab experiments done in
+ - https://github.com/charneykaye/encode-fmp4-demo
+ referenced in the question I posted on Stack Overflow
+ - https://stackoverflow.com/questions/69625970/java-mp4parser-to-create-a-single-m4s-fragment
  */
 public class ChunkPrinterImpl implements ChunkPrinter {
   private static final Logger LOG = LoggerFactory.getLogger(ChunkPrinterImpl.class);
@@ -47,13 +56,13 @@ public class ChunkPrinterImpl implements ChunkPrinter {
   private final ChunkManager chunkManager;
   private final FileStoreProvider fileStoreProvider;
   private final SegmentAudioManager segmentAudioManager;
+  private final String aacFilePath;
   private final String m4sFileName;
   private final String m4sFilePath;
-  private final String m4sFilePathTemplate;
   private final String mp4InitFileName;
   private final String mp4InitFilePath;
   private final String streamBucket;
-  private final String tempPlaylistFilePath;
+  private final String tempPlaylistPath;
   private final String threadName;
   private final String wavFilePath;
   private final int bitrate;
@@ -77,29 +86,19 @@ public class ChunkPrinterImpl implements ChunkPrinter {
     this.segmentAudioManager = segmentAudioManager;
 
     bitrate = env.getShipBitrateHigh();
-    mp4InitFileName = String.format("%s-%s-IS.mp4", chunk.getShipKey(), Values.kbps(bitrate));
-    mp4InitFilePath = String.format("%s%s", env.getTempFilePathPrefix(), mp4InitFileName);
-
     String key = chunk.getKey(bitrate);
+
+    aacFilePath = String.format("%s%s.aac", env.getTempFilePathPrefix(), key);
     m4sFileName = String.format("%s.m4s", key);
-    m4sFilePath = String.format("%s%s", env.getTempFilePathPrefix(), m4sFileName);
-    m4sFilePathTemplate = String.format("%s%s-%s-%%d.m4s", env.getTempFilePathPrefix(), chunk.getShipKey(), Values.kbps(bitrate));
+    m4sFilePath = String.format("%s%s-1.m4s", env.getTempFilePathPrefix(), key);
+    mp4InitFileName = String.format("%s-%s-IS.mp4", chunk.getShipKey(), Values.k(bitrate));
+    mp4InitFilePath = String.format("%s%s_init.mp4", env.getTempFilePathPrefix(), key);
     shipChunkPrintTimeoutSeconds = env.getShipChunkPrintTimeoutSeconds();
     shipChunkSeconds = env.getShipChunkSeconds();
     streamBucket = env.getStreamBucket();
-    tempPlaylistFilePath = String.format("%s%s-%s.m3u8", env.getTempFilePathPrefix(), chunk.getShipKey(), Values.kbps(bitrate));
+    tempPlaylistPath = String.format("%s%s", env.getTempFilePathPrefix(), key);
     threadName = String.format("CHUNK:%s", chunk.getKey());
     wavFilePath = String.format("%s%s.wav", env.getTempFilePathPrefix(), chunk.getKey());
-  }
-
-  @Override
-  public double[][] getOutputPcmData() {
-    return output;
-  }
-
-  @Override
-  public String getWavFilePath() {
-    return wavFilePath;
   }
 
   @Override
@@ -116,8 +115,28 @@ public class ChunkPrinterImpl implements ChunkPrinter {
     }
   }
 
+  @Override
+  public double[][] getOutputPcmData() {
+    return output;
+  }
+
+  @Override
+  public String getWavFilePath() {
+    return wavFilePath;
+  }
+
+  @Override
+  public String getM4sFilePath() {
+    return m4sFilePath;
+  }
+
+  @Override
+  public String getMp4InitFilePath() {
+    return mp4InitFilePath;
+  }
+
   /**
-   * Do the work inside a named thread
+   Do the work inside a named thread
    */
   private void doWork() throws ShipException {
     switch (chunk.getState()) {
@@ -156,7 +175,7 @@ public class ChunkPrinterImpl implements ChunkPrinter {
     output = new double[rate * shipChunkSeconds][AUDIO_CHANNELS];
 
     // get the buffer from each audio and lay it into the output buffer
-    LOG.debug("ready; will mix");
+    LOG.debug("will mix source audio to buffer");
     chunkManager.put(chunk.setState(ChunkState.Mixing));
     for (var audio : audios) {
       var initialSourceFrame = audio.getFrame(chunk.getFromInstant());
@@ -165,7 +184,7 @@ public class ChunkPrinterImpl implements ChunkPrinter {
           output[f][c] += read(initialSourceFrame + f, c, audio);
     }
 
-    LOG.debug("mixed; will write");
+    LOG.debug("will write mixing buffer to WAV");
     var audioFormat = computeAudioFormat(audios);
     try {
       var writer = new AudioStreamWriter(output, QUALITY);
@@ -176,25 +195,23 @@ public class ChunkPrinterImpl implements ChunkPrinter {
       return;
     }
 
-    LOG.debug("mixed; will encode");
+    LOG.debug("will encode AAC from WAV");
     chunkManager.put(chunk.setState(ChunkState.Encoding));
     try {
-      Files.deleteIfExists(Path.of(m4sFilePath));
-      var cmd = computeCmdFFMPEG((int) audioFormat.getSampleRate());
-      var proc = Runtime.getRuntime().exec(cmd);
-
-      String line;
-      List<String> output = Lists.newArrayList();
-      BufferedReader stdError = new BufferedReader(new InputStreamReader(proc.getErrorStream()));
-      while ((line = stdError.readLine()) != null) output.add(line);
-      if (0 != proc.waitFor()) {
-        LOG.error("Failed: {}\n\n{}", cmd, Text.formatMultiline(output.toArray()));
-        return;
-      }
-
-      LOG.debug("did encode MPEG-2 transport stream at {} to {}", bitrate, m4sFilePath);
+      encodeAAC();
+      LOG.info("did encode AAC audio at {} to {}", bitrate, aacFilePath);
     } catch (Exception e) {
-      LOG.error("Failed to encode audio", e);
+      LOG.error("Failed to encode AAC audio at {} to {}", bitrate, aacFilePath, e);
+      return;
+    }
+
+    LOG.debug("will construct M4S from AAC");
+    chunkManager.put(chunk.setState(ChunkState.Encoding));
+    try {
+      constructM4S();
+      LOG.info("did construct M4S at {} to {}", bitrate, m4sFilePath);
+    } catch (Exception e) {
+      LOG.error("Failed to construct M4S at {} to {}", bitrate, m4sFilePath, e);
       return;
     }
 
@@ -202,7 +219,7 @@ public class ChunkPrinterImpl implements ChunkPrinter {
     chunkManager.put(chunk.setState(ChunkState.Shipping));
     try {
       fileStoreProvider.putS3ObjectFromTempFile(m4sFilePath, streamBucket, m4sFileName);
-      LOG.info("did ship {} bytes of {} audio to s3://{}/{}", getFileSize(m4sFilePath), Values.kbps(bitrate), streamBucket, m4sFileName);
+      LOG.info("did ship {} bytes of {} audio to s3://{}/{}", getFileSize(m4sFilePath), Values.k(bitrate), streamBucket, m4sFileName);
     } catch (Exception e) {
       LOG.error("Failed to ship audio", e);
       return;
@@ -211,7 +228,7 @@ public class ChunkPrinterImpl implements ChunkPrinter {
       try {
         fileStoreProvider.putS3ObjectFromTempFile(mp4InitFilePath, streamBucket, mp4InitFileName);
         chunkManager.didInitialize(chunk.getShipKey());
-        LOG.info("did ship {} bytes of {} initializer to s3://{}/{}", getFileSize(mp4InitFilePath), Values.kbps(bitrate), streamBucket, mp4InitFileName);
+        LOG.info("did ship {} bytes of {} initializer to s3://{}/{}", getFileSize(mp4InitFilePath), Values.k(bitrate), streamBucket, mp4InitFileName);
       } catch (Exception e) {
         LOG.error("Failed to ship audio", e);
         return;
@@ -222,34 +239,71 @@ public class ChunkPrinterImpl implements ChunkPrinter {
   }
 
   /**
-   * Compute the command to run ffmpeg for this chunk printing
-   *
-   * @param bitrate of target
-   * @return ffmpeg command
+   Compute the command to run ffmpeg for this chunk printing
    */
-  private String computeCmdFFMPEG(int bitrate) {
-    var ffmpegBitrate = String.format("%dk", bitrate / 1000);
-    return String.join(" ", ImmutableList.of(
+  private void encodeAAC() throws IOException, InterruptedException {
+    Files.deleteIfExists(Path.of(aacFilePath));
+    execute("to encode AAC", List.of(
       "ffmpeg",
       "-i", getWavFilePath(),
-      "-f", "hls",
       "-ac", "2",
       "-c:a", "aac",
-      "-b:a", ffmpegBitrate,
-      "-minrate", ffmpegBitrate,
-      "-maxrate", ffmpegBitrate,
-      "-start_number", String.valueOf(chunk.getIndex()),
-      "-hls_fmp4_init_filename", mp4InitFileName,
-      "-hls_segment_filename", m4sFilePathTemplate,
-      "-hls_segment_type", "fmp4",
-      "-hls_time", "11",
-      tempPlaylistFilePath));
+      "-b:a", Values.k(bitrate),
+      "-minrate", Values.k(bitrate),
+      "-maxrate", Values.k(bitrate),
+      aacFilePath));
+  }
+
+
+  /**
+   Check the M4S output
+
+   @throws IOException on failure
+   */
+  private void constructM4S() throws IOException, InterruptedException {
+    Files.deleteIfExists(Path.of(m4sFilePath));
+
+    // we provide the number before the one we want it to generate next
+    String adjSeqNum = String.valueOf(chunk.getSequenceNumber() - 1);
+
+    execute("to construct MP4", List.of(
+      "MP4Box",
+      "-add", aacFilePath,
+      "-dash", String.valueOf(chunk.getLengthSeconds() * MILLIS_PER_SECOND),
+      "-frag", String.valueOf(chunk.getLengthSeconds() * MILLIS_PER_SECOND),
+      "-idx", adjSeqNum,
+      "-moof-sn", adjSeqNum,
+      "-out", tempPlaylistPath,
+      "-profile", "live",
+      "-segment-name", String.format("%s-", chunk.getKey(bitrate)),
+      "-v",
+      "/tmp:period=%s", adjSeqNum));
   }
 
   /**
-   * Whether all the source segments for this chunk are ready
-   *
-   * @return true if all segments are ready
+   Check the M4S output
+   <p>
+   This vector reached a dead end, documented in
+   https://stackoverflow.com/questions/69625970/java-mp4parser-to-create-a-single-m4s-fragment
+
+   @throws IOException on failure
+   */
+  @SuppressWarnings("unused")
+  private void constructM4S_viaMp4Parser() throws IOException {
+    Files.deleteIfExists(Path.of(m4sFilePath));
+    AACTrackImpl aacTrack = new AACTrackImpl(new FileDataSourceImpl(aacFilePath));
+    Movie movie = new Movie();
+    movie.addTrack(aacTrack);
+    Container mp4file = ChunkMp4Builder.newBuilder(chunk).build(movie);
+    FileChannel fc = new FileOutputStream(m4sFilePath).getChannel();
+    mp4file.writeContainer(fc);
+    fc.close();
+  }
+
+  /**
+   Whether all the source segments for this chunk are ready
+
+   @return true if all segments are ready
    */
   private boolean isSourceAudioReady() {
     List<String> ready = Lists.newArrayList();
@@ -277,20 +331,29 @@ public class ChunkPrinterImpl implements ChunkPrinter {
   }
 
   /**
-   * Compute the audio format from the given set of audios
-   *
-   * @param audios from which to compute format
-   * @return audio format
+   Get all the segment audios intersecting with this chunk
+
+   @return segment audios
+   */
+  private Collection<SegmentAudio> getAllIntersectingAudios() {
+    return segmentAudioManager.getAllIntersecting(chunk.getShipKey(), chunk.getFromInstant(), chunk.getToInstant());
+  }
+
+  /**
+   Compute the audio format from the given set of audios
+
+   @param audios from which to compute format
+   @return audio format
    */
   private AudioFormat computeAudioFormat(Collection<SegmentAudio> audios) {
     return audios.stream().findAny().orElseThrow().getAudioFormat();
   }
 
   /**
-   * Add one frame of a segment's source audio buffer onto the output buffer
-   *
-   * @param sourceFrame from which to get source
-   * @param audio       source
+   Add one frame of a segment's source audio buffer onto the output buffer
+
+   @param sourceFrame from which to get source
+   @param audio       source
    */
   private double read(int sourceFrame, int channel, SegmentAudio audio) {
     if (sourceFrame >= 0 && sourceFrame < audio.getPcmData().size())
@@ -300,11 +363,21 @@ public class ChunkPrinterImpl implements ChunkPrinter {
   }
 
   /**
-   * Get all the segment audios intersecting with this chunk
-   *
-   * @return segment audios
+   Execute the given command
+
+   @param cmdParts command parts to join (space-separated) and execute
+   @throws IOException          on failure
+   @throws InterruptedException on failure
    */
-  private Collection<SegmentAudio> getAllIntersectingAudios() {
-    return segmentAudioManager.getAllIntersecting(chunk.getShipKey(), chunk.getFromInstant(), chunk.getToInstant());
+  private void execute(String descriptiveInfinitive, List<String> cmdParts) throws IOException, InterruptedException {
+    String cmd = String.join(" ", cmdParts);
+    var proc = Runtime.getRuntime().exec(cmd);
+    String line;
+    List<String> output = Lists.newArrayList();
+    BufferedReader stdError = new BufferedReader(new InputStreamReader(proc.getErrorStream()));
+    while ((line = stdError.readLine()) != null) output.add(line);
+    if (0 != proc.waitFor()) {
+      throw new IOException(String.format("Failed %s: %s\n\n%s", descriptiveInfinitive, cmd, formatMultiline(output.toArray())));
+    }
   }
 }
